--- a/Frontend Javascript/index.html
+++ b/Frontend Javascript/index.html
@@ -4,225 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Registration Form</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #19cae6fe;
-            padding: 20px;
-            line-height: 1.6;
-        }
-
-        .container {
-            max-width: 600px;
-            margin: 30px auto;
-            background: rgb(183, 228, 232);
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        h1 {
-            color: #333;
-            margin-bottom: 10px;
-            font-size: 24px;
-            font-weight: normal;
-        }
-
-        .subtitle {
-            color: #666;
-            font-size: 14px;
-            margin-bottom: 30px;
-        }
-
-        .form-group {
-            margin-bottom: 20px;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 6px;
-            color: #333;
-            font-size: 14px;
-        }
-
-        label .required {
-            color: #d9534f;
-        }
-
-        input[type="text"],
-        input[type="email"],
-        select {
-            width: 100%;
-            padding: 10px 12px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            font-size: 14px;
-            font-family: 'Arial', sans-serif;
-            background-color: #fff;
-        }
-
-        input[type="text"]:focus,
-        input[type="email"]:focus,
-        select:focus {
-            outline: none;
-            border-color: #4CAF50;
-        }
-
-        .radio-group {
-            display: flex;
-            gap: 15px;
-            margin-top: 8px;
-        }
-
-        .radio-group label {
-            display: flex;
-            align-items: center;
-            gap: 6px;
-            font-weight: normal;
-            cursor: pointer;
-            margin-bottom: 0;
-        }
-
-        input[type="radio"] {
-            cursor: pointer;
-            margin: 0;
-        }
-
-        input[type="checkbox"] {
-            cursor: pointer;
-            margin-right: 8px;
-        }
-
-        .checkbox-group {
-            margin-top: 8px;
-        }
-
-        .checkbox-group label {
-            display: flex;
-            align-items: flex-start;
-            cursor: pointer;
-            font-weight: normal;
-        }
-
-        .submit-btn {
-            width: 100%;
-            padding: 12px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            font-size: 16px;
-            cursor: pointer;
-            margin-top: 10px;
-        }
-
-        .submit-btn:hover {
-            background-color: #45a049;
-        }
-
-        .error {
-            color: #d9534f;
-            font-size: 13px;
-            margin-top: 5px;
-            display: none;
-        }
-
-        /* Success Page Styles */
-        .success-page {
-            display: none;
-        }
-
-        .success-page.active {
-            display: block;
-        }
-
-        .success-header {
-            text-align: center;
-            margin-bottom: 30px;
-            padding-bottom: 20px;
-            border-bottom: 2px solid #4CAF50;
-        }
-
-        .success-icon {
-            font-size: 50px;
-            margin-bottom: 15px;
-        }
-
-        .success-message {
-            color: #4CAF50;
-            font-size: 22px;
-            margin-bottom: 5px;
-            font-weight: normal;
-        }
-
-        .success-subtitle {
-            color: #666;
-            font-size: 14px;
-        }
-
-        .details-section {
-            margin-bottom: 25px;
-        }
-
-        .details-title {
-            color: #333;
-            font-size: 16px;
-            margin-bottom: 15px;
-            font-weight: bold;
-        }
-
-        .detail-row {
-            padding: 12px 0;
-            border-bottom: 1px solid #eee;
-            display: flex;
-        }
-
-        .detail-row:last-child {
-            border-bottom: none;
-        }
-
-        .detail-label {
-            color: #666;
-            min-width: 120px;
-            font-size: 14px;
-        }
-
-        .detail-value {
-            color: #333;
-            font-size: 14px;
-            font-weight: 500;
-        }
-
-        .back-btn {
-            width: 100%;
-            padding: 12px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            font-size: 16px;
-            cursor: pointer;
-        }
-
-        .back-btn:hover {
-            background-color: #45a049;
-        }
-
-        .note {
-            background-color: #f9f9f9;
-            border-left: 3px solid #4CAF50;
-            padding: 12px;
-            margin-top: 20px;
-            font-size: 13px;
-            color: #666;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
